--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       }
       
       .vela-azul {
-        background: linear-gradient(135deg, #3b82f6 0%, #1e40af 100%);
+        background: linear-gradient(135deg, #3b82f6 0%, #2c57e4 100%);
         color: white;
       }
       
