--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
             <option value="br4betcom">BR4BET</option>
             <option value="openbox">OpenBox</option>
             <option value="Jetx-ApostaTudo">Jetx - Aposta tudo</option>
+             <option value="Jetx-Realsbet">Jetx - Realsbet</option>
           </select>
         </div>
         
