--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
       </div>
 
       <!-- Painel de Padrões Mapeados -->
-      <div id="padroes-panel" class="padroes-panel glass-effect rounded-2xl p-4 hidden lg:block">
+      <div id="padroes-panel" class="padroes-panel glass-effect rounded-2xl p-4 lg:block">
         <h3 class="text-lg font-bold text-white mb-4 flex items-center gap-2">
           <span>🎯</span>
           <span>Padrões Mapeados</span>
