--- a/index.html
+++ b/index.html
@@ -375,6 +375,23 @@
             <span class="text-gray-500">Carregando análise...</span>
           </div>
         </div>
+        <div id="contador-minutos-rosas" class="mt-3 hidden">
+          <div class="flex items-center justify-center gap-2 p-2 rounded-lg bg-gradient-to-r from-blue-500/20 to-cyan-500/20 border border-blue-500/30">
+            <span class="text-xs font-semibold text-blue-300">⏱️ Minutos desde última rosa:</span>
+            <span id="contador-valor" class="text-lg font-bold text-white">0</span>
+            <span class="text-xs text-blue-300">min</span>
+          </div>
+          <div id="alerta-entrada" class="mt-2 text-center hidden">
+            <div class="space-y-1">
+              <span class="inline-flex items-center gap-2 px-3 py-1.5 rounded-lg bg-gradient-to-r from-yellow-500/40 to-orange-500/40 border-2 border-yellow-500/70 text-yellow-300 font-bold text-sm animate-pulse">
+                ⚠️ PRÓXIMO PADRÃO - PREPARAR ENTRADA ⚠️
+              </span>
+              <div id="proxima-vela-info" class="text-xs text-yellow-200 bg-yellow-500/20 rounded px-2 py-1 border border-yellow-500/30">
+                Próxima vela esperada em: <span id="minuto-esperado" class="font-bold">--</span> min
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
       <!-- Padrões Top -->
@@ -1316,13 +1333,61 @@
 
         function renderizarMinutosRosas(dados) {
           const minutosList = document.getElementById('minutos-rosas-list');
+          const contadorMinutos = document.getElementById('contador-minutos-rosas');
+          const contadorValor = document.getElementById('contador-valor');
+          const alertaEntrada = document.getElementById('alerta-entrada');
+          const minutoEsperado = document.getElementById('minuto-esperado');
 
           if (dados.minutos.length === 0) {
             minutosList.innerHTML = '<span class="text-gray-500">Nenhum padrão de minutos encontrado ainda</span>';
+            contadorMinutos.classList.add('hidden');
+            alertaEntrada.classList.add('hidden');
             return;
           }
 
           const { minutos, minutosDesdeUltima } = dados;
+
+          // Mostra/esconde contador baseado na existência de última rosa
+          if (minutosDesdeUltima > 0) {
+            contadorMinutos.classList.remove('hidden');
+            contadorValor.textContent = minutosDesdeUltima;
+
+            // Alerta para entrada: quando estiver próximo de 10 minutos (entre 9 e 11)
+            const deveAlertar = minutosDesdeUltima >= 9 && minutosDesdeUltima <= 11;
+            if (deveAlertar) {
+              alertaEntrada.classList.remove('hidden');
+
+              // Calcula qual será o minuto da próxima vela (última rosa + 10 minutos)
+              // Pega o horário da última rosa das velas globais
+              const velasGlobais = window.velasGlobais || [];
+              let ultimoHorarioRosa = null;
+
+              for (let i = velasGlobais.length - 1; i >= 0; i--) {
+                const vela = velasGlobais[i];
+                if (parseFloat(vela.numero) >= 10) {
+                  ultimoHorarioRosa = vela.horario;
+                  break;
+                }
+              }
+
+              if (ultimoHorarioRosa) {
+                const [horaRosa, minRosa] = ultimoHorarioRosa.split(':');
+                const totalMinRosa = parseInt(horaRosa) * 60 + parseInt(minRosa);
+                const totalMinEsperado = totalMinRosa + 10; // Próxima vela esperada em 10 minutos
+                const horaEsperada = Math.floor(totalMinEsperado / 60);
+                const minEsperado = totalMinEsperado % 60;
+                const minutoFormatado = minEsperado.toString().padStart(2, '0');
+                minutoEsperado.textContent = minutoFormatado;
+              } else {
+                minutoEsperado.textContent = '--';
+              }
+            } else {
+              alertaEntrada.classList.add('hidden');
+            }
+          } else {
+            contadorMinutos.classList.add('hidden');
+            alertaEntrada.classList.add('hidden');
+          }
 
           minutosList.innerHTML = minutos.map(data => {
             const isProximo = minutosDesdeUltima > 0 && minutosDesdeUltima === data.minutos;
